# Biblireseau

./: Biblireseau  CMakeLists.txt  README.md  UML  error_code
db/: backup  testNetwork.txt
db/User/: test
src/: Album.cpp  Book.h  Entity.cpp  Entity.h  Library.cpp  Library.h  Novel.h  Play.cpp  Play.h  Poetry.cpp  Poetry.h  User.cpp  User.h  main.cpp
src/Book/: Album.cpp  Album.h  Book.cpp  Book.h  Comic.cpp  Comic.h  Novel.cpp  Novel.h  Play.cpp  Play.h  Poetry.cpp  Poetry.h
src/Entity/: Entity.h  Library.cpp  Library.h  User.cpp  User.h
src/Network/: Network.cpp  Network.h  SaveManager.cpp  SaveManager.h
src/User/: Library.cpp  Library.h  Member.cpp  Member.h  User.cpp  User.h
